Revert "dowork en FormularioPestana.java"
This reverts commit 98bacfb918d9bc815e0928d5ea5dfc207ee27fd1.